--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-11-1	Steven Y. Yi	<stevenyi@csounds.com>
+	* rdorch.c: fixed printf statement in synterr() to use %c instead of %f
+
 2003-10-29  John D. Ramsdell  <ramsdell@mitre.org>
 
 	* csound.spec.in: Added an RPM spec for Csound.
