--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-04  John D. Ramsdell  <ramsdell@mitre.org>
+
+	* configure.in: Added AM_INIT_AUTOMAKE, AM_PROG_CC_STDC, and code
+	that adds -Wall when using GCC.
+
 2003-11-02  John D. Ramsdell  <ramsdell@mitre.org>
 
 	* AUTHORS, INSTALL, NEWS: Added empty files to be filled in when
